[build-system]
requires = ["setuptools>=61.0", "pyasyncore; python_version >= '3.12'", "cryptography"] # core requirements are needed for version detection when building for PyPI, which requires importing (but not running) the script on `ubuntu-latest`
build-backend = "setuptools.build_meta"

[project]
name = "emailproxy"
authors = [
    { name = "Dima Stukalo", email = "dmytro.stukalo@it-capital.com.ua" }
]
description = "Transparently add OAuth 2.0 support to IMAP/POP/SMTP clients that don't support this authentication method."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache License 2.0" }
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Topic :: Communications :: Email :: Post-Office",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: Communications :: Email :: Post-Office :: POP3",
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools]
py-modules = ["emailproxy"] # ignore other folders in the root directory (note that some (such as "tests") *cannot* be ignored in the .tar.gz sdist without a MANIFEST.in)

[project.scripts]
emailproxy = "emailproxy:App"

[project.urls]
"Source Code" = "https://github.com/stukalodima/emailproxy"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-core.txt"] }
optional-dependencies.gui = { file = ["requirements-gui.txt"] }
version = { attr = "emailproxy.__package_version__" }
